<resources>
    <string name="app_name">Homework</string>
    <string name="str_description">Geek Hub Android 2015/2016 Homework</string>
    <string name="str_nav_description">Homework tasks list</string>
    <string name="task1_name">Task 1 \"Hello, World!\"</string>
    <string name="str_say_hello">Say Hello</string>
    <string name="str_hello">Hello, World!</string>
    <string name="str_introduce">I\'m the first program \"Hello, World!\"</string>
    <string name="str_what_your_name">What is your name?</string>
    <string name="str_enter_name">Enter your name, please</string>
    <string name="str_hello_smb" formatted="false">Hello, %s!</string>
    <string name="label_acquaintance">Let\'s get acquainted?</string>
    <string name="str_introduce_myself">Introduce Myself</string>
    <string name="task2_name">Task 2 \"Fibonacci and Factorial\"</string>
    <string name="str_task2_description">Calculating of the n-th element of the Fibonacci sequence and the factorial of the number</string>
    <string name="str_enter_number">Enter number, please</string>
    <string name="str_calculate">Calculate</string>
    <string name="str_fibonacci" formatted="false">Fibonacci of %d: %d</string>
    <string name="str_factorial" formatted="false">Factorial of %d: %d</string>
    <string name="str_error" formatted="false">Error: %s</string>
    <string name="str_err_fibonacci" formatted="false">Fibonacci: Error calculating. %s</string>
    <string name="str_err_factorial" formatted="false">Factorial: Error calculating. %s</string>
    <string name="task3_name">Task 3 \"Collections\"</string>
    <string name="task4_name">Task 4 \"OOP\"</string>
    <string name="str_previous">Previous</string>
    <string name="str_next">Next</string>
    <string name="task5_name">Task 5 \"Back Stack. UI\"</string>
    <string name="str_animation_options">Options</string>
    <string name="str_animation1">Fade In</string>
    <string name="str_animation2">Slide Down</string>
    <string name="str_animation3">Rotate</string>
    <string name="str_animation4">Shake</string>
    <string name="str_test_animation">Test Animation</string>
    <string name="task6_name">Task 6 \"UI. Layouts. Fragments.\"</string>
    <string name="str_task6_list_description">The world\'s most beautiful cities</string>
    <string-array name="task6_items_list">
        <item>Isfahan, Iran</item>
        <item>Florence, Italy</item>
        <item>Luang Prabang, Laos</item>
        <item>Paris, France</item>
        <item>Istanbul, Turkey</item>
        <item>Siena, Italy</item>
        <item>Jerusalem</item>
        <item>Oxford, UK</item>
        <item>Cambridge, UK</item>
        <item>New York, USA</item>
        <item>Rome, Italy</item>
        <item>Cape Town, South Africa</item>
        <item>Sydney, Australia</item>
        <item>Bruges, Belgium</item>
        <item>Fes, Morocco</item>
    </string-array>
</resources>