<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_task1"
            android:icon="@drawable/ic_launch_black_24dp"
            android:title="@string/task1_name" />
        <item
            android:id="@+id/nav_task2"
            android:icon="@drawable/ic_launch_black_24dp"
            android:title="@string/task2_name" />
        <item
            android:id="@+id/nav_task3"
            android:icon="@drawable/ic_launch_black_24dp"
            android:title="@string/task3_name" />
        <item
            android:id="@+id/nav_task4"
            android:icon="@drawable/ic_launch_black_24dp"
            android:title="@string/task4_name" />
        <item
            android:id="@+id/nav_task5"
            android:icon="@drawable/ic_launch_black_24dp"
            android:title="@string/task5_name" />
    </group>
</menu>